Fixed building Repaired tag_name throwing errors Changed server port to 8082